2010-05-06  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Fix cmd-scroll zoom on Mac.
	  Use more conventional direction for zooming.

2010-05-05  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Add some (disabled) debug
	  code.

2010-05-05  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Made scrolling faster.

2010-05-05  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/FoldMarkerMargin.cs: fixed little issue with
	  toggle code focus command.

2010-05-05  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/FoldMarkerMargin.cs:
	* Mono.TextEditor/DocumentUpdateRequest.cs: Fixed 'Bug 602615
	  - Editor responds very slowly to quick mousewheel
	  scrolling'.

2010-05-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.TextEditor/TextEditorContainer.cs: Don't create a text
	  editor unless required. Unsubscribe adjustment events when
	  the container is destroyed. All this fixes some memory
	  leaks.

2010-05-03  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.PopupWindow/TooltipWindow.cs: Dispose
	  Pango.Layout.

2010-05-03  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Dispose pango attributes.

2010-05-03  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditorData.cs: Don't create empty
	  gtk.adjustments on every text editor data creation.

2010-05-03  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/DashedLineMargin.cs: release resources in
	  dashed line margin.

2010-05-03  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditorData.cs: Cleanly unregister from
	  document & caret on dispose.

2010-04-30  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Fixed 'Bug 601184 -
	  Flickering tooltips'.

2010-04-30  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/DefaultEditActions.cs: Fixed 'Bug 601189 –