@@ -1,5 +1,11 @@
 2010-05-06  Michael Hutchinson  <mhutchinson@novell.com>
 
+	* Mono.TextEditor/TextViewMargin.cs: Track GTK mouse modifier
+	  changes on Mac. Now block selection could be cmd or control,
+	  depending on GTK version.
+
+2010-05-06  Michael Hutchinson  <mhutchinson@novell.com>
+
 	* Mono.TextEditor/TextEditor.cs: Fix cmd-scroll zoom on Mac.
 	  Use more conventional direction for zooming.
 
